[tool.poetry]
name = "coroutincache"
version = "1.1.0"
description = "The Simple library for corutine cache"
authors = ["IX <borntokill.ix@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
